--- a/docker/all/Dockerfile
+++ b/docker/all/Dockerfile
@@ -18,7 +18,7 @@ FROM ${OPENROAD_IMG} as openroad
 FROM ${DOCKER_BASE_IMG} AS runner
 # install packages
 COPY packages.txt /packages.txt
-RUN yum install -y $(cat /packages.txt)
+RUN yum update -y && yum install -y $(cat /packages.txt)
 COPY requirements.txt /requirements.txt
 RUN pip3 install --no-cache-dir -r requirements.txt
 
@@ -30,6 +30,21 @@ COPY --from=openroad /build /build
 # gui
 RUN dbus-uuidgen --ensure
 
-ENV PATH /build/bin:$PATH
+# install texinfo
+RUN mkdir texinfo && \
+    cd texinfo && \
+    curl -L https://ftp.gnu.org/gnu/texinfo/texinfo-7.1.tar.gz | tar -xzC . --strip-components=1 && \
+    ./configure --prefix=/usr && \
+    make && \
+    make check && \
+    make install
+
+# Install risc-v toolchain
+RUN git clone https://github.com/riscv/riscv-gnu-toolchain.git --recurse-submodules
+RUN cd /riscv-gnu-toolchain && git checkout 1358115 && git submodule update
+RUN cd /riscv-gnu-toolchain && ./configure --prefix=/opt/riscv
+RUN cd /riscv-gnu-toolchain && make 
+
+ENV PATH /build/bin:/opt/riscv/bin:$PATH
 ENV LD_LIBRARY_PATH=/build/lib:$LD_LIBRARY_PATH
 CMD /bin/bash
