--- a/docker/yosys/Dockerfile
+++ b/docker/yosys/Dockerfile
@@ -10,7 +10,7 @@
 ARG DOCKER_BASE_IMG=almalinux:8.9
 
 FROM ${DOCKER_BASE_IMG} AS builder
-ARG YOSYS_REPO=https://github.com/phsauter/yosys.git
+ARG YOSYS_REPO=https://github.com/phsauter/yosys
 ARG YOSYS_COMMIT=b6c520ad023fd16bbaa40a186fb51ba0d8b80dc1
 # install packages
 COPY packages.txt /packages.txt
@@ -19,6 +19,7 @@ RUN yum install -y $(cat /packages.txt)
 WORKDIR /yosys
 # pull and build
 RUN curl -L ${YOSYS_REPO}/archive/${YOSYS_COMMIT}.tar.gz | tar -xzC . --strip-components=1 && \
+    sed -i 's/std::strlen/strlen/g' /yosys/passes/techmap/abc.cc && \
     make config-clang && \
     make -j && \
     make PREFIX=/build install
